# english-app

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  launch.json.example  package-lock.json
.github/: copilot-instructions.md  pull_request_template.md
backend/: .coverage  .env.example  .pre-commit-config.yaml  README.md  pyproject.toml
backend/api/: analyze.py  dependencies.py  main.py
backend/core/: exceptions.py
backend/core/interfaces/: llm.py  pronunciation.py  stt.py
backend/core/models/: diff.py  pronunciation.py  transcription.py
backend/core/services/: pronunciation_service.py  text_comparison.py
backend/providers/: azure_pronunciation.py  deepgram_stt.py  openai_llm.py
backend/tests/: conftest.py  test_analyze_endpoint.py  test_azure_pronunciation.py  test_azure_pronunciation_live.py  test_deepgram_stt.py  test_deepgram_stt_live.py  test_health.py  test_openai_llm.py  test_openai_llm_live.py  test_phonemes_endpoint.py  test_pipeline_integration.py  test_text_comparison.py
backend/tests/fixtures/: README.md  generate_fixtures.py
docs/: architecture.md  features.md  mvp_prd.md
frontend/app/: page.tsx
frontend/components/: BilingualSentenceList.tsx  FeedbackPanel.tsx  IPAReference.tsx  SentenceList.tsx  SessionPanel.tsx
frontend/lib/: api.ts
plan/: Backend-api-endpoint.md  F-000-backend-setup.md  F-001-deepgram-stt-provider.md  F-002-text-comparison-engine.md  F-011-pronunciation-assessment-provider.md  Frontend-minimal-e2e.md  Frontend-sentence-feedback.md  Frontend-setup.md  backend-setup.md  core-pipeline-service.md  llm-feedback-generator.md  phoneme-preview.md
research/: deepgram-stt-provider.md
skills/: skill.md
skills/features/: SKILL.md  iterate_feature_pr.md  ship_feature.md
skills/git/: SKILL.md  pr.md
skills/git-usage/: SKILL.md  commits.md  pr.md
skills/investigate/: investigate.md
(+1 files in other folders)
